# PhysXWrapper

./: .gitignore  CMakeLists.txt  README.md  build-linux-release.sh
include/: framework.h  wrapper.h
src/: TriggerFilterCallback.h  dllmain.cpp  wrapper.cpp
